# mist-shell

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  shell.nix
.cargo/: config.toml
.zig-cache/o/00202e84b682679406a6f14eee2ce1a2/: mist-shell
.zig-cache/o/0219fc40e4d1da295b1a901267bcade5/: dependencies.zig
.zig-cache/o/0c4efb6302d37b4590859a89b52ccde3/: wayland.zig
.zig-cache/o/0db3a598978cce1b1f622393fabff08a/: mist-shell
.zig-cache/o/189f6cc0b5b79bf5f87bded62baf58dd/: mist-shell
.zig-cache/o/1b1021cdcc30000406eb47ad63072a27/: mist-shell
.zig-cache/o/1c082ba76dc4513745a5560073bf58bd/: mist-shell
.zig-cache/tmp/04bf686c0012e5b3/: cimport.h
mist-compositor/: Cargo.toml
mist-compositor/src/: main.rs
mist-shell/: Cargo.toml
mist-shell/src/: bar.rs  calc.rs  config.rs  ease.rs  launcher.rs  main.rs  render.rs  shell_ipc.rs  state.rs  status.rs  text.rs  tokens.rs  wl.rs
mist-shell/src/compositor/: dedicated.rs  mangowm.rs  mod.rs  niri.rs
protocols/: dwl-ipc-unstable-v2.xml  wlr-layer-shell-unstable-v1.xml
src/: bar.zig  basu.h  basu_c.zig  c.zig  color.zig  config.zig  config_parser.zig  font.zig  geo.zig  geometry.zig  main.zig  media_popup.zig  mpris.zig  output.zig  render.zig  seat.zig  sidebar.zig  text.zig  theme.zig  tr.h  util.zig  wayland.zig  widget.zig  wl.zig  workspace.zig
src/components/: root_container.zig
src/service/: battery.zig  brightness.zig  mpris.zig  network.zig  power_profiles.zig  sysinfo.zig  system_tray.zig  volume.zig
src/shell/: bounded_array.zig  popup.zig  render.zig
src/widget/: registry.zig
(+22 files in other folders)
