[package]
name = "mist-shell"
version = "0.2.0"
edition = "2024"

[dependencies]
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
calloop = "0.14"
vello = "0.9"
wgpu = { version = "29", features = ["wgsl"] }
cosmic-text = "0.19"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
libc = "0.2"
xkbcommon = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "1"
raw-window-handle = "0.6"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
resvg = { version = "0.47", features = ["text"] }


